log/build_2024-11-30_19-52-04/follow/stderr.log
  File "/home/robot/human_ws/install/follow/lib/python3.10/site-packages/follow/follow_tag_static2.py", line 36
    self.z_offset = [-0.7,,1.4,0.45,1]
                          ^
SyntaxError: invalid syntax

